--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.ts": "npx tsc --noEmit",
-    "*.{js,jsx,ts,tsx}": "npx eslint",
-    "*.{js,jsx,ts,tsx,html,css}": "npx prettier --check"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,scss,html,json}": [
+      "prettier --write"
+    ]
   },
   "browserslist": {
     "production": [
