--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-city-guide",
+  "homepage": "https://username.github.io/ReactCityGuide",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +21,9 @@
     "eject": "react-scripts eject",
     "format": "prettier --write .",
     "precommit": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -51,9 +54,10 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
+    "husky": "^8.0.0",
     "lint-staged": "^15.4.1",
-    "prettier": "^3.4.2",
-    "husky": "^8.0.0"
+    "prettier": "^3.4.2"
   }
 }
