--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-city-guide",
-  "homepage": "https://username.github.io/ReactCityGuide",
+  "homepage": "https://github.com/PrytkovDmitrii/ReactCityGuide.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
